cluster/apps/media/transmission/backend-traffic-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: transmission
  namespace: media
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: transmission
  responseTimeout: 120s
  tcpKeepalive:
    idleTime: 60s
    interval: 30s
    probes: 5
